# rtype

./: .gitattributes  .gitignore  CMakeLists.txt  build.sh  conanfile.txt
doc/: r-type-uml.pu  r-type.mdj  rfc8701.txt
include/: Exception.hpp  NetworkUDP.hpp
include/client/: App.hpp  Entity.hpp  Game.hpp  GameEngine.hpp  GameEngineClient.hpp  Menu.hpp  Network.hpp
include/client/render/: Sprite.hpp  Sprites.hpp
include/entity/: GameEntity.hpp  IEntity.hpp  Missile.hpp  Mob.hpp  Player.hpp  Pos.hpp
include/server/: CLI.hpp  Commands.hpp  Fork.hpp  GameEngine.hpp  GameServer.hpp  Instance.hpp  Server.hpp
src/: Exception.cpp  NetworkUDP.cpp
src/client/: App.cpp  Entity.cpp  Game.cpp  GameEngine.cpp  GameEngineClient.cpp  Menu.cpp  Network.cpp  main.cpp
src/client/render/: Sprite.cpp  Sprites.cpp
src/entity/: GameEntity.cpp  Missile.cpp  Mob.cpp  Player.cpp
src/server/: CLI.cpp  Commands.cpp  Fork.cpp  GameEngine.cpp  GameServer.cpp  Instance.cpp  Server.cpp  main.cpp
src/share/: Player.cpp  Pos.cpp
